--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.8)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \ -fconcepts")
+set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \ -O3 -g" )
 
 
 add_subdirectory(src)
